# competitive-rust-library

./: Cargo.toml  README.md  expander.py
src/: float.rs  input.rs  io.rs  lib.rs  math.rs  parser.rs  template.rs
src/float/: total_ord.rs
src/io/: read_one.rs  scanner.rs  stdin_reader.rs  write.rs
src/math/: distance.rs  gcd_lcm.rs  prime_number.rs
src/num_trait/: zero.rs
src/template/: competitive_rs_template.rs
