[package]
name = "competitive-rust-library"
version = "0.1.0"
authors = ["ktmtrtr <mtkt06311@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6.5"

[dev-dependencies]
cli_test_dir = "0.1.8"

[[bin]]
name = "read_one"
path = "src/io/read_one.rs"

[[bin]]
name = "read"
path = "src/io/read.rs"

[[bin]]
name = "stdin_reader"
path = "src/io/stdin_reader.rs"

[[bin]]
name = "write"
path = "src/io/write.rs"
